--- a/senate-data.html
+++ b/senate-data.html
@@ -29,10 +29,25 @@
                     
                     <ul class="nav navbar-nav">
                         <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/home.html">Home</a></li>
+                        <!--Congress dropdown-->
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Congress 113 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="active"><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/senate-data.html">Senate</a></li>
                                 <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/house-data.html">House</a></li>
+                            </ul>
+                        </li>
+                        <!--Attendance dropdown-->
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendance <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/senate-data.html">Senate Attendance</a></li>
+                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/house-data.html">House Attendance</a></li>
+                            </ul>
+                        </li>
+                        <!--Loyalty dropdown-->
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Party Loyalty <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/senate-party-loyalty.html">Senate Loyalty</a></li>
+                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/house-party-loyalty.html">House Loyalty</a></li>
                             </ul>
                         </li>
                     </ul>
