attendance and loyalty pages created

--- a/senate-data.html
+++ b/senate-data.html
@@ -39,8 +39,8 @@
                         <!--Attendance dropdown-->
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendance <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/senate-data.html">Senate Attendance</a></li>
-                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/house-data.html">House Attendance</a></li>
+                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/senate-attendance.html">Senate Attendance</a></li>
+                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/house-attendance.html">House Attendance</a></li>
                             </ul>
                         </li>
                         <!--Loyalty dropdown-->
