--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -81,7 +81,7 @@
             <p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda.</p>
     	    
             <h2>Senate at a glance</h2>
-            <table>
+            <table class="table table-striped smallTables">
                 <thead>
                     <tr>
                         <th>Party</th>
@@ -92,7 +92,7 @@
             </table>
 
             <h2>Least Loyal (Bottom 10% Attendance)</h2>
-            <table>
+            <table class="table table-striped smallTables">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -103,7 +103,7 @@
             </table>
 
             <h2>Most Loyal (Top 10% Attendance)</h2>
-            <table>
+            <table class="table table-striped smallTables">
                 <thead>
                     <tr>
                         <th>Name</th>
