--- a/house-attendance.html
+++ b/house-attendance.html
@@ -83,7 +83,7 @@
             <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
     	    
             <h2>House at a glance</h2>
-            <table>
+            <table id="dataTable" class="table table-striped smallTables">
                 <thead>
                     <tr>
                         <th>Party</th>
@@ -94,7 +94,7 @@
             </table>
 
             <h2>Least Engaged (Bottom 10% Attendance)</h2>
-            <table>
+            <table id="dataTable" class="table table-striped smallTables">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -105,7 +105,7 @@
             </table>
 
             <h2>Most Engaged (Top 10% Attendance)</h2>
-            <table>
+            <table id="dataTable" class="table table-striped smallTables">
                 <thead>
                     <tr>
                         <th>Name</th>
