--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -82,34 +82,28 @@
             <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
     	    
             <h2>Senate at a glance</h2>
-            <table>
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Party</th>
-                        <th>Number of Reps</th>
-                        <th>% Voted with Prty</th>
+                        <th>N° of Representatives</th>
+                        <th>Votes with Party</th>
                     </tr>
                 </thead>
+                 <tbody id="glance-table-body"></tbody>
             </table>
 
             <h2>Least Engaged (Bottom 10% Attendance)</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Number of Missed Votes</th>
-                        <th>% Missed</th>
-                    </tr>
-                </thead>
+            <table id="myTable" class="table table-striped engTable">
             </table>
 
             <h2>Most Engaged (Top 10% Attendance)</h2>
-            <table>
+            <table  class="table table-striped">
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Number of Missed Votes</th>
-                        <th>% Missed</th>
+                        <th>N° of Missed Votes</th>
+                        <th>Percentage of Missed Votes</th>
                     </tr>
                 </thead>
             </table>
