--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -94,11 +94,7 @@
             </table>
 
             <h2>Least Engaged (Bottom 10% Attendance)</h2>
-            <table id="myTable" class="table table-striped engTable">
-            </table>
-
-            <h2>Most Engaged (Top 10% Attendance)</h2>
-            <table  class="table table-striped">
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -106,6 +102,19 @@
                         <th>Percentage of Missed Votes</th>
                     </tr>
                 </thead>
+                <tbody id="least-engaged-table"></tbody>
+            </table>
+
+            <h2>Most Engaged (Top 10% Attendance)</h2>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>N° of Missed Votes</th>
+                        <th>Percentage of Missed Votes</th>
+                    </tr>
+                </thead>
+                <tbody id="most-engaged-table"></tbody>
             </table>
                 
             <div class="col-lg-2">
