--- a/home.html
+++ b/home.html
@@ -118,6 +118,7 @@
         </footer>
         
     <!--- Scripts -->
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="script/congress-113-senate.js"></script>
     <script src="script/main.js"></script>
         
