--- a/house-attendance.html
+++ b/house-attendance.html
@@ -131,8 +131,7 @@
         </footer>
         
             <!--- Scripts -->
-        <script src="script/congress-113-house.js"></script>
-        <script src="script/engagement.js"></script>
+        <script src="https://unpkg.com/vue/dist/vue.js"></script>
         <script src="script/main.js"></script>
         
     <!--Bootstrap-->    
