--- a/house-data.html
+++ b/house-data.html
@@ -134,6 +134,7 @@
         </footer>
         
     <!--- Scripts -->
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="script/congress-113-house.js"></script>
     <script src="script/main.js"></script>
         
