--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -130,8 +130,7 @@
         </footer>
         
             <!--- Scripts -->
-    <script src="script/congress-113-senate.js"></script>
-    <script src="script/engagement.js"></script>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>        
     <script src="script/main.js"></script>
         
     <!--Bootstrap-->    
