--- a/senate-data.html
+++ b/senate-data.html
@@ -131,7 +131,8 @@
         </footer>
         
     <!--- Scripts -->
-    <script src="script/congress-113-senate.js"></script>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <!--<script src="script/congress-113-senate.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="script/main.js"></script>      
         
