--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -129,8 +129,7 @@
         </footer>
         
             <!--- Scripts -->
-    <script src="script/congress-113-senate.js"></script>
-    <script src="script/loyalty.js"></script>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>        
     <script src="script/main.js"></script>
         
     <!--Bootstrap-->    
