server file path changed

--- a/senate-data.html
+++ b/senate-data.html
@@ -28,26 +28,26 @@
                 <div class="container-fluid">
                     
                     <ul class="nav navbar-nav">
-                        <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/home.html">Home</a></li>
+                        <li><a href="/home.html">Home</a></li>
                         <!--Congress dropdown-->
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Congress 113 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/senate-data.html">Senate</a></li>
-                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/house-data.html">House</a></li>
+                                <li class="active"><a href="/senate-data.html">Senate</a></li>
+                                <li><a href="/house-data.html">House</a></li>
                             </ul>
                         </li>
                         <!--Attendance dropdown-->
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendance <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/senate-attendance.html">Senate Attendance</a></li>
-                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/house-attendance.html">House Attendance</a></li>
+                                <li><a href="/senate-attendance.html">Senate Attendance</a></li>
+                                <li><a href="/house-attendance.html">House Attendance</a></li>
                             </ul>
                         </li>
                         <!--Loyalty dropdown-->
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Party Loyalty <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/senate-party-loyalty.html">Senate Loyalty</a></li>
-                                <li><a href="file:///C:/Users/bambo/OneDrive/Desktop/TGIF%20Project/house-party-loyalty.html">House Loyalty</a></li>
+                                <li><a href="/senate-party-loyalty.html">Senate Loyalty</a></li>
+                                <li><a href="/house-party-loyalty.html">House Loyalty</a></li>
                             </ul>
                         </li>
                     </ul>
