--- a/house-data.html
+++ b/house-data.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html dir="ltr" lang="en">
 
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,150 +10,148 @@
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <title>House</title>
+    <title>Senate</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
+    <div id="app">
+        <header>
 
-    <!--- HEADER --->
-    <header>
-
-        <div class="container header-container">
-            <img src="img/006-speech-2.png" alt="logo">
-            <h1 id="company-name">Transparent Government in Fact</h1>
-
-        </div>
-
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-
-                <ul class="nav navbar-nav">
-                    <li><a href="/home.html">Home</a></li>
-                    <!--Congress dropdown-->
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Congress 113 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/senate-data.html">Senate</a></li>
-                            <li class="active"><a href="/house-data.html">House</a></li>
-                        </ul>
-                    </li>
-                    <!--Attendance dropdown-->
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendance <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/senate-attendance.html">Senate Attendance</a></li>
-                            <li><a href="/house-attendance.html">House Attendance</a></li>
-                        </ul>
-                    </li>
-                    <!--Loyalty dropdown-->
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Party Loyalty <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/senate-party-loyalty.html">Senate Loyalty</a></li>
-                            <li><a href="/house-party-loyalty.html">House Loyalty</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <!--email icon-->
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Email Us</a></li>
-                </ul>
-            </div>
-
-            <!--the NavBar become a list-square for smaller devices-->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-        </nav>
-
-    </header>
-
-    <!--- MAIN CONTENT --->
-    <div class="container main-container">
-
-        <div class="row">
-
-            <div class="col-lg-2">
-                <form name="FilterForm" id="party-filter">
-
-                    <legend>Sort by party:</legend>
-                    <div>
-                        <input type="checkbox" id="democrat-button" name="party" value="democrat">
-                        <label for="coding">Democrat</label>
-                    </div>
-
-                    <div>
-                        <input type="checkbox" id="republican-button" name="party" value="republican">
-                        <label for="music">Republican</label>
-                    </div>
-
-                    <div>
-                        <input type="checkbox" id="independent-button" name="party" value="independent">
-                        <label for="music">Independent</label>
-                    </div>
-
-                </form>
-
-                <form name="filter" id="FilterForm">
-
-                    <select id="state-filter">
-                        <option>Select a state</option>
-                    </select>
-
-                </form>
+            <div class="container header-container">
+                <img src="../img/006-speech-2.png" alt="logo">
+                <h1 id="company-name">Transparent Government in Fact</h1>
 
             </div>
 
-            <div class="col-lg-9">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
 
-                <h2 class="text-center">Congressmen</h2>
-                <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
-                <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
+                    <ul class="nav navbar-nav">
+                        <li><a href="home.html">Home</a></li>
+                        <!--Congress dropdown-->
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Congress 113
+                                <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li class="active"><a href="senate-data.html">Senate</a></li>
+                                <li><a href="house-data.html">House</a></li>
+                            </ul>
+                        </li>
+                        <!--Attendance dropdown-->
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendance <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="senate-attendance.html">Senate Attendance</a></li>
+                                <li><a href="house-attendance.html">House Attendance</a></li>
+                            </ul>
+                        </li>
+                        <!--Loyalty dropdown-->
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Party Loyalty
+                                <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="senate-party-loyalty.html">Senate Loyalty</a></li>
+                                <li><a href="house-party-loyalty.html">House Loyalty</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Email Us</a></li>
+                    </ul>
+                </div>
 
-                <div class="table-responsive">
+                <!--the NavBar become a list-square for smaller devices-->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+            </nav>
+        </header>
 
-                    <!--Loading Icon-->
-                    <div id="floatBarsG">
-                        <div id="floatBarsG_1" class="floatBarsG"></div>
-                        <div id="floatBarsG_2" class="floatBarsG"></div>
-                        <div id="floatBarsG_3" class="floatBarsG"></div>
-                        <div id="floatBarsG_4" class="floatBarsG"></div>
-                        <div id="floatBarsG_5" class="floatBarsG"></div>
-                        <div id="floatBarsG_6" class="floatBarsG"></div>
-                        <div id="floatBarsG_7" class="floatBarsG"></div>
-                        <div id="floatBarsG_8" class="floatBarsG"></div>
-                    </div>
+        <!--- MAIN CONTENT --->
+        <div class="container main-container">
 
-                    <table id="dataTable" class="table table-striped">
-                    </table>
+            <div class="row">
 
-                    <div id="alertSelection" class="alert alert-info">No matches found. Please select a party.</div>
+                <div class="col-lg-2">
+
+                    <!-- generate Checkboxes with Vue-->
+                    <ul id="party-filter">
+                        <li v-for="party in parties">
+                            <input type="checkbox" v-bind:value="party" v-model="partyArray" @change="filterEngine">
+                            <label :for="party">{{party}}</label>
+                        </li>
+                    </ul>
+
+                    <form name="filter" id="FilterForm">
+
+                        <select id="state-filter" v-model="selectedState" @change="filterEngine">
+                            <option value="all">Select a state</option>
+                            <option v-bind:value="state" v-for="state in states">{{state}}</option>
+                        </select>
+
+                    </form>
 
                 </div>
+
+                <div class="col-lg-9">
+
+                    <h2 class="text-center">Congressmen</h2>
+                    <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
+                    <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
+
+
+                    <div class="table-responsive">
+
+                        <!--Loading Icon-->
+                        <div id="floatBarsG" v-if="isLoadding == true">
+                            <div id="floatBarsG_1" class="floatBarsG"></div>
+                            <div id="floatBarsG_2" class="floatBarsG"></div>
+                            <div id="floatBarsG_3" class="floatBarsG"></div>
+                            <div id="floatBarsG_4" class="floatBarsG"></div>
+                            <div id="floatBarsG_5" class="floatBarsG"></div>
+                            <div id="floatBarsG_6" class="floatBarsG"></div>
+                            <div id="floatBarsG_7" class="floatBarsG"></div>
+                            <div id="floatBarsG_8" class="floatBarsG"></div>
+                        </div>
+
+                        <table id="dataTable" class="table table-striped" v-if="isLoadding == false">
+                            <tr v-for="member in filteredMembers">
+                                <td>{{member.first_name}} <span v-if="member.middle_name != null">{{member.middle_name}}</span>
+                                    {{member.last_name}}</td>
+                                <td>{{member.state}}</td>
+                                <td>{{member.party}}</td>
+                                <td>{{member.seniority}}</td>
+                                <td>{{member.votes_with_party_pct}}</td>
+
+                            </tr>
+                        </table>
+
+                        <div id="alertSelection" class="alert alert-info" v-if="filteredMembers.length == 0">No matches
+                            found. Please select a party.</div>
+
+                    </div>
+                </div>
+                <div class="col-lg-1"></div>
+
             </div>
-            <div class="col-lg-1"></div>
 
         </div>
 
+        <footer class="container-fluid bg-4 text-center">
+
+            <p class="text-center">&copy;2016 | All Rights reserved.</p>
+
+        </footer>
     </div>
-
-    <!--- FOOTER --->
-    <footer class="container-fluid bg-4 text-center">
-
-        <p>&copy;2016 | All Rights reserved.</p>
-
-    </footer>
-
     <!--- Vue -->
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <!--- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="script/main.js"></script>
+    <script src="vue/main-vue.js"></script>
     <!--Bootstrap-->
     <script src="js/bootstrap.min.js"></script>
-
 
 </body>
 
